# radianceengine

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  bench.txt  cppclean.bat
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  release.yml
include/: SearchMaterialistNegamax.h  annex.h  bishop.h  board.h  boardParser.h  cMove.h  client.h  connect.h  evaluate.h  evaluateShannon.h  evaluateShannonHeuristics.h  evaluateTable.h  evaluateTableTuned.h  evaluateTableTunedBitboard.h  game.h  include.h  king.h  knight.h  pawn.h  piece.h  queen.h  rook.h  search.h  searchMaterialist.h  searchMaterialistNegamax.h  searchRandom.h  uci.h  utils.h
src/: CMakeLists.txt  bishop.cpp  client.cpp  game.cpp  hello.cpp  king.cpp  knight.cpp  main.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp  uci.cpp  ucioption.cpp
test/: CMakeLists.txt  bitboardMoves.cpp  perftKiwi.cpp  perftStart.cpp
webui/: index.html  index.js  package.json  raw_server.js  script.js  server.bat
